--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.2.13
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+gunicorn==22.0.0
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
