--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,10 @@ pillow==10.3.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
-python==3.8.13
 python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.5.0
 tomli==2.0.1
 typing_extensions==4.11.0
+python<3.9
+
